--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "0.0.1",
   "name": "@iobroker-bot-orga/check-tasks",
   "dependencies": {
-    "@iobroker/repochecker": "^3.5.8",
+    "@iobroker/repochecker": "^4.0.0-alpha.1",
     "axios": "^1.9.0",
     "compare-versions": "^6.1.1",
     "image-size": "^1.2.0",
